--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -843,6 +843,7 @@
   <string name="carrier_billing_payment_method_title">Carrier billing</string>
   <string name="carrier_billing_fees_disclaimer">Additional fees may apply</string>
   <string name="carrier_billing_insert_phone_body">Please insert your phone number</string>
+  <string name="carrier_billing_insert_phone_previously_used">Continue with previously used number</string>
   <string name="carrier_billing_phone_field">Your phone number...</string>
   <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
   <string name="carrier_billing_purchase_info_body">%1$s in %2$s.</string>
